--- a/app/assets/stylesheets/decks.css.sass
+++ b/app/assets/stylesheets/decks.css.sass
@@ -6,6 +6,12 @@
   padding: 5px 0
   border-bottom: 1px solid #333
 
+  .suggestion-bg-image
+    background: url() 0 33% / cover no-repeat
+
+  .suggestion-bg-color
+    background-color: rgba(255, 255, 255, 0.85)
+
   .card-image
     width: 20%
     margin-right: 5%
